# octra-hfhe-v2-security-assessment

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRYPTOGRAPHIC_CLAIMS_GUIDE.md  EXECUTIVE_SUMMARY.md  FINDINGS.md  LICENSE  LIMITATIONS.md  METHODOLOGY.md  Makefile  README.md  REPORT.md  SECURITY.md  THREAT_MODEL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
disclosure/: EMAIL_TEMPLATE.md  TECHNICAL_SUMMARY.md  VENDOR_CHECKLIST.md
research/: CROSS_GENERATION_COMPOSITION_ASSESSMENT.md  HFHE_V2_CIPHERTEXT_ALGEBRA.md  KUBO_AUDIT_SUMMARY.md  OCTRA_LPN_PRACTICAL_ASSESSMENT.md  OCTRA_MOBIUS_SEQUENCING_ASSESSMENT.md  PHASE2_DEEP_TESTING_PLAN.md  PHASE2_LAB_LOG.md  RNG_HISTORY_REPORT.md  S10_PEG_DEEP_AUDIT.md  hfhe-subgroup-projection-report.md  hfhe-v2-algorithm-assessment.md  lpn_practical_benchmark.json  lpn_practical_benchmark.py
results/: artifact_audit.txt  field-mobius.json  findings.json  findings.sarif  hypergraph-mobius.json  invariant_production_results.json  invariant_reduced_results.json  lpn-bkw.json  lpn-mobius.json  tensor_v2_results.json
scripts/: run-all.sh  secret-scan.py  setup.sh  verify-artifacts.sh  verify-mobius.sh
tools/: analyze_artifact_history.sh  analyze_tensor_v2.py  cross_artifact_rng.cpp  hfhe_ciphertext_algebra_toy.py  hfhe_subgroup_projection_audit.cpp  hfhe_subgroup_toy.py  hfhe_v2_structural_audit.cpp  length_framing_probe.cpp  prf_r_audit.cpp  (+2 more)
tools/bit-fault-atlas/: Cargo.toml
tools/bit-fault-atlas/src/: lib.rs  main.rs
tools/bit-fault-atlas/tests/: atlas.rs  cli.rs
(+70 files in other folders)
