[package]
name = "bit-fault-atlas"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Independent span-aware parser and streaming bit-fault scheduler for OCTRA HFHE bundles"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bit-fault-atlas"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
